[package]
name = "tts"
version = "0.1.2"
authors = ["Vlad Verestiuc <verestiuc.vlad@gmail.com>"]

[dependencies]
rusoto_polly = "0.34.0"
rusoto_core = "0.34.0"
dbus-macros = "0.2.3"
dbus = "0.6.2"
atty = "0.2"
alto = "3.0.3"
lewton = "0.9.0"
byteorder = "1.2.6"
punkt = "1.0.4"
xml-rs = "0.8"
clipboard = "0.4.6"
md5 = "0.4.0"
toml = "0.4"
serde_derive = "1.0"
serde = "1.0.79"
rust-ini = "0.12.2"
dirs = "1.0.3"
rusoto_credential = "0.13.0"
